--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "presets": ["env", "stage-3"]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "node": "10.0.0"
+        }
+      }
+    ]
+  ],
+  "plugins": ["transform-object-rest-spread"]
 }
