--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js",
-    "test-start": "TEST_DB=testslack nodemon --exec babel-node index.js",
+    "start": "nodemon --exec babel-node src/index.js",
+    "serve": "node dist/index.js",
+    "build": "babel src -d dist",
     "test": "TEST_DB=testslack jest",
     "prettier": "prettier --single-quote --trailing-comma all --write '{./*.js,./**/*.js}'"
   },
