--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "TEST_DB=testslack jest",
     "prettier":
       "prettier --single-quote --trailing-comma all --write '{./*.js,./**/*.js}'",
-    "docker:build": "docker build -t penthious/slack-clone-server:latest",
+    "docker:build": "docker build -t penthious/slack-clone-server:latest .",
     "docker:push": "docker push penthious/slack-clone-server:latest"
   },
   "keywords": [],
