--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
     "serve": "node dist/index.js",
-    "build": "babel src -d dist",
+    "build": "NODE_ENV=production BABEL_ENV=production babel src -d dist",
     "test": "TEST_DB=testslack jest",
     "prettier":
       "prettier --single-quote --trailing-comma all --write '{./*.js,./**/*.js}'",
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-jest": "^22.4.3",
+    "babel-minify": "^0.4.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
